--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm run build:lib
-      - run: npx semantic-release
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
