--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,12 @@
 name: Release
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - lib
+      - library/next
+      - library/beta
+      - library/develop
 
 jobs:
   release:
