--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,4 +32,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GIT_AUTHOR_NAME: "Egoka"
+          GIT_AUTHOR_EMAIL: "eg.bonda2014@gmail.com"
+          GIT_COMMITTER_NAME: "Egoka"
+          GIT_COMMITTER_EMAIL: "eg.bonda2014@gmail.com"
         run: npx semantic-release
