--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,11 +10,7 @@ on:
 
 jobs:
   release:
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
-      id-token: write
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
