--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,16 +18,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 9.6.0
       - uses: actions/setup-node@v2
         with:
           node-version: '20'
-      - run: npm ci
+          cache: "pnpm"
+      - run: pnpm install --frozen-lockfile
       - name: Lint library
-        run: npm run lint
+        run: pnpm run lint
       - name: Build library
-        run: npm run build:lib
+        run: pnpm run build:lib
       - name: Test library
-        run: npm run test
+        run: pnpm run test
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
