--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,11 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 9.6.0
       - uses: actions/setup-node@v2
         with:
           node-version: '20'
-      - run: npm ci
+          cache: "pnpm"
+      - run: pnpm install --frozen-lockfile
       - name: Lint library
-        run: npm run lint
+        run: pnpm lint
       - name: Test library
-        run: npm run test
+        run: pnpm test
