--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,11 @@ jobs:
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
       - name: Lint library
-        run: pnpm run lint
+        run: pnpm lint
       - name: Build library
-        run: pnpm run build:lib
+        run: pnpm build:lib
       - name: Test library
-        run: pnpm run test
+        run: pnpm test
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
