--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,5 +27,5 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add CHANGELOG.md
-          git commit -m "chore: update CHANGELOG"
+          git commit -m "chore: update CHANGELOG [skip ci]"
           git push origin test
