--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,10 @@ jobs:
       - name: Commit and push changes
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GIT_AUTHOR_NAME: "Egoka"
+          GIT_AUTHOR_EMAIL: "eg.bonda2014@gmail.com"
+          GIT_COMMITTER_NAME: "Egoka"
+          GIT_COMMITTER_EMAIL: "eg.bonda2014@gmail.com"
         run: |
           git add CHANGELOG.md
           git commit -m "chore: update CHANGELOG [skip ci]"
