--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,9 +32,21 @@ jobs:
         run: pnpm build:lib
       - name: Test library
         run: pnpm test
-      - name: Check status
+      - name: Add date to CHANGELOG
         run: |
-          gh auth login --with-token <<< "${{ secrets.PAT_TOKEN }}"
+          echo "$(date)" >> CHANGELOG.md
+
+      - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GIT_AUTHOR_NAME: "Egoka"
+          GIT_AUTHOR_EMAIL: "eg.bonda2014@gmail.com"
+          GIT_COMMITTER_NAME: "Egoka"
+          GIT_COMMITTER_EMAIL: "eg.bonda2014@gmail.com"
+        run: |
+          git add CHANGELOG.md
+          git commit -m "chore: update CHANGELOG [skip ci]"
+          git push origin test
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
