--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,4 +44,4 @@ jobs:
       - name: Get release version
         if: steps.release.outputs.new_release_published == 'true'
         run:
-          echo "Release version: ${{ steps.release.outputs.new_release_version }}"
+          echo "Release version: "${{ steps.release.outputs.new_release_version }}
