--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,5 +43,5 @@ jobs:
         run: npx semantic-release
       - name: Get release version
         if: steps.release.outputs.new_release_published == 'true'
-        run:
-          echo "Release version: "${{ steps.release.outputs.new_release_version }}
+        run: |
+          echo "Release version: ${{ steps.release.outputs.new_release_version }}"
