ci(up): update ci

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,11 @@ jobs:
           GIT_COMMITTER_NAME: "Egoka"
           GIT_COMMITTER_EMAIL: "eg.bonda2014@gmail.com"
         run: npx semantic-release
-      - name: Get release version
-        run: |
-          echo "Release version: ${{ steps.release.outputs }}"
-          echo "Release version: ${{ steps.release.outputs.new_release_version }}"
+
+      - name: Read version from .VERSION
+        id: read_version
+        run: echo "VERSION=$(cat .VERSION)" >> $GITHUB_ENV
+
+      - name: Add version to CHANGELOG
+        run: echo "${{ env.VERSION }}" >> CHANGELOG.md
+
