--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,3 +49,14 @@ jobs:
 
       - name: Print version
         run: echo "The current version is ${{ env.VERSION }}"
+      - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GIT_AUTHOR_NAME: "Egoka"
+          GIT_AUTHOR_EMAIL: "eg.bonda2014@gmail.com"
+          GIT_COMMITTER_NAME: "Egoka"
+          GIT_COMMITTER_EMAIL: "eg.bonda2014@gmail.com"
+        run: |
+          git add .A
+          git commit -m "release(${{ env.VERSION }}): [skip ci]"
+          git push origin ${{ env.BRANCH_NAME }}
