--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,11 +52,8 @@ jobs:
       - name: Commit and push changes
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-          GIT_AUTHOR_NAME: "Egoka"
-          GIT_AUTHOR_EMAIL: "eg.bonda2014@gmail.com"
-          GIT_COMMITTER_NAME: "Egoka"
-          GIT_COMMITTER_EMAIL: "eg.bonda2014@gmail.com"
         run: |
-          git add -A
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git commit -m "release(${{ env.VERSION }}): [skip ci]"
           git push origin ${{ env.BRANCH_NAME }}
