--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,15 @@ jobs:
       - name: Add date to CHANGELOG
         run: |
           echo "$(date)" >> CHANGELOG.md
-
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GIT_AUTHOR_NAME: "Egoka"
+          GIT_AUTHOR_EMAIL: "eg.bonda2014@gmail.com"
+          GIT_COMMITTER_NAME: "Egoka"
+          GIT_COMMITTER_EMAIL: "eg.bonda2014@gmail.com"
+        run: npx semantic-release
       - name: Commit and push changes
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
