--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,13 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.PAT_TOKEN }}
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 9.6.0
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '20'
+          cache: "pnpm"
       - run: pnpm install --frozen-lockfile
       - name: Build library
         run: pnpm build:lib
