--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,17 +34,19 @@ jobs:
           GIT_COMMITTER_NAME: "Egoka"
           GIT_COMMITTER_EMAIL: "eg.bonda2014@gmail.com"
         run: npx semantic-release
-      - name: Add date to CHANGELOG
+      - name: Read version from package.json
+        id: read_version
         run: |
-          echo "$(date)" >> CHANGELOG.md
+          VERSION=$(jq -r '.version' lib/package.json)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Print version
+        run: echo "The current version is ${{ env.VERSION }}"
       - name: Commit and push changes
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-          GIT_AUTHOR_NAME: "Egoka"
-          GIT_AUTHOR_EMAIL: "eg.bonda2014@gmail.com"
-          GIT_COMMITTER_NAME: "Egoka"
-          GIT_COMMITTER_EMAIL: "eg.bonda2014@gmail.com"
         run: |
-          git add CHANGELOG.md
-          git commit -m "chore: update CHANGELOG [skip ci]"
-          git push origin test
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git commit -m "release(${{ env.VERSION }}): [skip ci]"
+          git push origin ${{ env.BRANCH_NAME }}
