--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,21 +40,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GIT_AUTHOR_NAME: "Egoka"
-          GIT_AUTHOR_EMAIL: "eg.bonda2014@gmail.com"
-          GIT_COMMITTER_NAME: "Egoka"
-          GIT_COMMITTER_EMAIL: "eg.bonda2014@gmail.com"
+          GIT_AUTHOR_NAME: "github-actions[bot]"
+          GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
+          GIT_COMMITTER_NAME: "github-actions[bot]"
+          GIT_COMMITTER_EMAIL: "github-actions[bot]@users.noreply.github.com"
         run: npx semantic-release
-#      - name: Read version from package.json
-#        id: read_version
-#        run: |
-#          VERSION=$(jq -r '.version' lib/package.json)
-#          echo "VERSION=$VERSION" >> $GITHUB_ENV
-#      - name: Commit and push changes
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-#        run: |
-#          git config --global user.name 'github-actions[bot]'
-#          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-#          git commit -m "release(${{ env.VERSION }}): [skip ci]"
-#          git push origin ${{ env.BRANCH_NAME }}
